--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -3,6 +3,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:iosched="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar_actionbar"
+    android:elevation="4dp"
     android:background="@color/primary"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize" />
