--- a/app/src/main/res/layout/activities_logger_list_item.xml
+++ b/app/src/main/res/layout/activities_logger_list_item.xml
@@ -8,25 +8,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/tripTypeIcon"
+        android:id="@+id/activityTypeIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"/>
 
     <com.mani.activitylogger.ui.AddressView
-        android:id="@+id/tripAddress"
+        android:id="@+id/activityAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_normal"
-        android:layout_toRightOf="@id/tripTypeIcon"/>
+        android:layout_toRightOf="@id/activityTypeIcon"/>
 
     <TextView
-        android:id="@+id/tripTime"
+        android:id="@+id/activityTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tripAddress"
+        android:layout_below="@id/activityAddress"
         android:layout_marginLeft="@dimen/margin_normal"
-        android:layout_toRightOf="@id/tripTypeIcon"
+        android:layout_toRightOf="@id/activityTypeIcon"
         style="@style/ListItemDescriptionFont"/>
 
 </RelativeLayout>
