--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="padding_normal">15dp</dimen>
     <dimen name="padding_small">5dp</dimen>
 
-    <dimen name="trip_address_text_size">16sp</dimen>
-    <dimen name="trip_arrow_margin">7dp</dimen>
+    <dimen name="address_text_size">16sp</dimen>
+    <dimen name="arrow_margin">7dp</dimen>
 
 </resources>
